<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Lingua Player</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by&#8230;</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_name_desc">Name (desc)</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_artist_name_desc">Artist name (desc)</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_album_name_desc">Album name (desc)</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_length_desc">Length (desc)</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_date_desc">Date (desc)</string>
    <string name="sortby_number">Nb tracks</string>
    <string name="sortby_number_desc">Nb tracks (desc)</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="video_app_switch_title">Action on application switching</string>
    <string name="video_app_switch_summary">Select VLC behavior when you switch to other application from video playback</string>
    <string name="play_pip_title">Play videos in Picture-in-picture mode</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="append">Append</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_delete_folder">Delete the folder \'%1$s\' and all its contents?</string>
    <string name="confirm_delete_playlist">Delete playlist \'%1$s\'?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="info_title" translatable="false">Lingua Player</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_number">Unknown number of Tracks</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="noplaylist">No playlist found.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="directorynotfound">The directory path \'%1$s\' was not found.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle_title">Shuffle mode</string>
    <string name="shuffle">Shuffle Off</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="repeat_title">Repeat mode</string>
    <string name="repeat">Repeat none</string>
    <string name="repeat_single">Repeat single</string>
    <string name="repeat_all">Repeat all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="firstsong">First song of the playlist</string>
    <string name="lastsong">Last song of the playlist</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_screen">Fit screen</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitle track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_bitrate_info">Bitrate: %1$s/s\n</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="brightness">Brightness</string>
    <string name="navmenu">navigation menu</string>
    <string name="subtitle_text_encoding">Subtitle text encoding</string>
    <string name="video_prefs_category">Video</string>
    <string name="video_min_group_length_title">Group videos</string>
    <string name="video_min_group_length_summary">Videos are grouped if their first letters are the same.</string>
    <string name="media_seen">Show seen video marker</string>
    <string name="media_seen_summary">Mark a video as seen when you play it until the end</string>
    <string name="force_list_portrait">No grid in portrait mode</string>
    <string name="force_list_portrait_summary">Show videos in list instead of grid in portrait mode</string>
    <string name="force_play_all_summary">Play all videos, starting with the one you clicked on</string>
    <string name="force_play_all_title">Video playlist mode</string>
    <string name="save_brightness_summary">Remember brightness level in video player</string>
    <string name="save_brightness_title">Save brightness level for video</string>
    <string name="save_audiodelay_summary">Save individual audio delay for each video</string>
    <string name="save_audiodelay_title">Save audio delay</string>
    <string name="save_subtitledelay_summary">Save delay of subtitles for each video</string>
    <string name="save_subtitledelay_title">Save subtitle delay</string>
    <string name="enable_brightness_gesture_title">Brightness gesture</string>
    <string name="enable_brightness_gesture_summary">Control brightness by gesture during video playback</string>
    <string name="enable_brightness_gesture_title_lock">Brightness gesture lock mode</string>
    <string name="enable_brightness_gesture_summary_lock">Control brightness in lock mode by gesture during video playback</string>
    <string name="enable_volume_gesture_title">Volume gesture</string>
    <string name="enable_volume_gesture_summary">Control volume by gesture during video playback</string>
    <string name="enable_volume_gesture_title_lock">Volume gesture lock mode</string>
    <string name="enable_volume_gesture_summary_lock">Control volume in lock mode by gesture during video playback</string>
    <string name="enable_seek_gesture_title">Seek gesture</string>
    <string name="enable_seek_gesture_summary">Seek by gesture during video playback</string>
    <string name="enable_seek_gesture_title_lock">Seek gesture lock mode</string>
    <string name="enable_seek_gesture_summary_lock">Seek in lock mode by gesture during video playback</string>
    <string name="enable_doubletap_gesture_title">Double tap</string>
    <string name="enable_doubletap_gesture_summary">Double tap to pause and resume video playback</string>
    <string name="enable_doubletap_gesture_title_lock">Double tap lock mode</string>
    <string name="enable_doubletap_gesture_summary_lock">Double tap in lock mode to pause and resume video playback</string>
    <string name="enable_edge_seek_title">Edge seek</string>
    <string name="enable_edge_seek_summary">Double tap on edges to seek 10 second</string>
    <string name="enable_edge_seek_title_lock">Edge seek lock mode</string>
    <string name="enable_edge_seek_summary_lock">Double tap on edges to seek 10 second in lock mode</string>
    <string name="enable_seek_buttons">Enable seek buttons</string>
    <string name="enable_seek_buttons_summary">Show rewind and forward buttons on the video interface</string>
    <string name="popup_keepscreen_title">Keep screen ON in Pop-Up mode</string>
    <string name="popup_keepscreen_summary">Always keep screen ON while Pop-Up is displayed, even if video is paused.</string>
    <string name="subtitles_prefs_category">Subtitles</string>
    <string name="subtitles_size_title">Subtitles Size</string>
    <string name="subtitles_bottom_margins_title">Subtitles Bottom margins</string>
    <string name="subtitles_color_title">Subtitles Color</string>
    <string name="subtitles_background_title">Subtitles Background</string>
    <string name="subtitles_outline_width_title">Subtitles Outline Width</string>
    <string name="subtitles_outline_color_title">Subtitles Outline Color</string>
    <string name="gesture_controls_prefs_category">Gesture controls</string>
    <string name="gesture_controls_prefs_category_lock">Gesture controls lock mode</string>
    <string name="other_controls_prefs_category">Other controls</string>
    <string name="confirm_resume_title">Ask confirmation to resume</string>
    <string name="confirm_resume_summary">if activated you will be asked to confirm when a video can be resumed from last position</string>
    <string name="preferences_languages_download">Subtitles languages</string>
    <string name="list_languages_download_summary">Languages to download when fetching subtitles</string>
    <string name="list_languages_download_title">Subtitles download languages</string>
</resources>