<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="video_category"
    android:title="@string/video_prefs_category">

    <ListPreference
        android:defaultValue="6"
        android:entries="@array/video_min_group_length_list"
        android:entryValues="@array/video_min_group_length_values"
        android:key="video_min_group_length"
        android:persistent="true"
        android:summary="@string/video_min_group_length_summary"
        android:title="@string/video_min_group_length_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="media_seen"
        android:summary="@string/media_seen_summary"
        android:title="@string/media_seen" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="force_list_portrait"
        android:summary="@string/force_list_portrait_summary"
        android:title="@string/force_list_portrait" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="save_brightness"
        android:summary="@string/save_brightness_summary"
        android:title="@string/save_brightness_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="save_individual_audio_delay"
        android:summary="@string/save_audiodelay_summary"
        android:title="@string/save_audiodelay_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="save_individual_subtitle_delay"
        android:summary="@string/save_subtitledelay_summary"
        android:title="@string/save_subtitledelay_title" />

    <ListPreference
        android:key="video_action_switch"
        android:defaultValue="0"
        android:entries="@array/video_app_switch_action_titles"
        android:entryValues="@array/video_app_switch_action_values"
        android:summary="@string/video_app_switch_summary"
        android:title="@string/video_app_switch_title" />

    <PreferenceCategory android:title="@string/gesture_controls_prefs_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_volume_gesture"
            android:summary="@string/enable_volume_gesture_summary"
            android:title="@string/enable_volume_gesture_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_brightness_gesture"
            android:summary="@string/enable_brightness_gesture_summary"
            android:title="@string/enable_brightness_gesture_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_seek_gesture"
            android:summary="@string/enable_seek_gesture_summary"
            android:title="@string/enable_seek_gesture_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_doubletap_gesture"
            android:summary="@string/enable_doubletap_gesture_summary"
            android:title="@string/enable_doubletap_gesture_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_edge_seek"
            android:summary="@string/enable_edge_seek_summary"
            android:title="@string/enable_edge_seek_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gesture_controls_prefs_category_lock">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_volume_gesture_lock"
            android:summary="@string/enable_volume_gesture_summary_lock"
            android:title="@string/enable_volume_gesture_title_lock" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_brightness_gesture_lock"
            android:summary="@string/enable_brightness_gesture_summary_lock"
            android:title="@string/enable_brightness_gesture_title_lock" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_seek_gesture_lock"
            android:summary="@string/enable_seek_gesture_summary_lock"
            android:title="@string/enable_seek_gesture_title_lock" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_doubletap_gesture_lock"
            android:summary="@string/enable_doubletap_gesture_summary_lock"
            android:title="@string/enable_doubletap_gesture_title_lock" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_edge_seek_lock"
            android:summary="@string/enable_edge_seek_summary_lock"
            android:title="@string/enable_edge_seek_title_lock"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/other_controls_prefs_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="audio_boost"
            android:summary="@string/audio_boost_summary"
            android:title="@string/audio_boost_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="force_play_all"
            android:summary="@string/force_play_all_summary"
            android:title="@string/force_play_all_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="dialog_confirm_resume"
            android:summary="@string/confirm_resume_summary"
            android:title="@string/confirm_resume_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_seek_buttons"
            android:summary="@string/enable_seek_buttons_summary"
            android:title="@string/enable_seek_buttons" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="popup_keepscreen"
            android:summary="@string/popup_keepscreen_summary"
            android:title="@string/popup_keepscreen_title" />
    </PreferenceCategory>

</PreferenceScreen>
